[package]
name = "twitch-harvester-server"
version = "0.1.0"
authors = ["Shikhar Sharma <ceoshikhar@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
tokio = { version = "1.4.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
